@@ -4,6 +4,7 @@ mako_plugin/dirbrowserext.py makotmp.acp
                     Fix mako tag auto complete bug #issue 14
 unicodetext.py      Fix utf-16 convertion bug
 mIndentMove.py      When moving next indent position, select the text #issue 15
+FlatNotebook.py     Fix if set DROP_DOWN_TABS_LIST style, right arrow will disappear bug
 
 [2008/01/10]
 EditorFactory.py    Add FNB.FNB_DROPDOWN_TABS_LIST style to EditorCtrl
